Meta: Changelog update

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -33,6 +33,8 @@
 </style>
 </head>
 <body>
+<h2>2024-04-12 <code class="notranslate">Light Volume Raycaster</code></h2>
+<p>Based on the raycasting components and the <code class="notranslate">Standard Volume Raycaster</code>, the <code class="notranslate">Light Volume Raycaster</code> provides the same volume rendering capabilities while also considering a light volume for volumetric shading. The light volume can be generated with the processor of the same name (<code class="notranslate">Light Volume</code>).</p>
 <h2>2024-04-09 Updated <code class="notranslate">PositionProperty</code></h2>
 <p>The <code class="notranslate">PositionProperty</code>, formerly a <code class="notranslate">FloatVec3Property</code>, is now a self-contained composite property that supports a position in world, view, and clip coordinates. Multiple read-only properties provide the transformed position in various coordinate systems. Optionally, the position can be offset to the look-to point of the camera or a custom position. This enables the use of spherical coordinates in a "local" coordinate system, for example a light source circling around a volume that is not centered at (0,0,0).</p>
 <h2>2024-03-01 <code class="notranslate">LayerGLProcessor</code> and changes to <code class="notranslate">VectorFieldVisualizationGL</code> module</h2>
