Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -11338,6 +11338,8 @@
       </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.Processor.invokeEvent">invokeEvent() (inviwopy.Processor method)</a>
 </li>
+      <li><a href="_generated/inviwopy.html#inviwopy.Inport.isChanged">isChanged() (inviwopy.Inport method)</a>
+</li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.BoolCompositeProperty.isChecked">isChecked() (inviwopy.properties.BoolCompositeProperty method)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.CompositeProperty.isCollapsed">isCollapsed() (inviwopy.properties.CompositeProperty method)</a>
@@ -12630,7 +12632,15 @@
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Property.onChange">onChange() (inviwopy.properties.Property method)</a>
 </li>
+      <li><a href="_generated/inviwopy.html#inviwopy.Inport.onChangeScoped">onChangeScoped() (inviwopy.Inport method)</a>
+</li>
+      <li><a href="_generated/inviwopy.html#inviwopy.Inport.onConnectScoped">onConnectScoped() (inviwopy.Inport method)</a>
+</li>
+      <li><a href="_generated/inviwopy.html#inviwopy.Inport.onDisconnectScoped">onDisconnectScoped() (inviwopy.Inport method)</a>
+</li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.ImageChannel.One">One (inviwopy.data.ImageChannel attribute)</a>
+</li>
+      <li><a href="_generated/inviwopy.html#inviwopy.Inport.onInvalidScoped">onInvalidScoped() (inviwopy.Inport method)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.ProcessorWidget.onTop">onTop (inviwopy.ProcessorWidget property)</a>
 </li>
