Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -15,7 +15,7 @@
         <script src="_static/jquery.js?v=5d32c60e"></script>
         <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
         <script src="_static/documentation_options.js?v=28b1853b"></script>
-        <script src="_static/doctools.js?v=888ff710"></script>
+        <script src="_static/doctools.js?v=9a2dae69"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
     <link rel="index" title="Index" href="#" />
@@ -7724,8 +7724,6 @@
       <li><a href="_generated/inviwopy.html#inviwopy.ModulePath.CL">CL (inviwopy.ModulePath attribute)</a>
 
       <ul>
-        <li><a href="_generated/inviwopy.html#inviwopy.Tag.CL">(inviwopy.Tag attribute)</a>
-</li>
         <li><a href="_generated/inviwopy.html#inviwopy.Tags.CL">(inviwopy.Tags attribute)</a>
 </li>
       </ul></li>
@@ -8183,12 +8181,8 @@
         <li><a href="_generated/ivwbnl.html#ivwbnl.BrushingModifications.count">(ivwbnl.BrushingModifications method)</a>
 </li>
       </ul></li>
-      <li><a href="_generated/inviwopy.html#inviwopy.Tag.CPU">CPU (inviwopy.Tag attribute)</a>
-
-      <ul>
-        <li><a href="_generated/inviwopy.html#inviwopy.Tags.CPU">(inviwopy.Tags attribute)</a>
+      <li><a href="_generated/inviwopy.html#inviwopy.Tags.CPU">CPU (inviwopy.Tags attribute)</a>
 </li>
-      </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.DataReaderFactory.create">create() (inviwopy.DataReaderFactory method)</a>
 
       <ul>
@@ -10383,12 +10377,8 @@
       </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.PickingEvent.getWorldSpaceDeltaAtPressDepth">getWorldSpaceDeltaAtPressDepth() (inviwopy.PickingEvent method)</a>
 </li>
-      <li><a href="_generated/inviwopy.html#inviwopy.Tag.GL">GL (inviwopy.Tag attribute)</a>
-
-      <ul>
-        <li><a href="_generated/inviwopy.html#inviwopy.Tags.GL">(inviwopy.Tags attribute)</a>
+      <li><a href="_generated/inviwopy.html#inviwopy.Tags.GL">GL (inviwopy.Tags attribute)</a>
 </li>
-      </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.PickingEvent.globalPickingId">globalPickingId (inviwopy.PickingEvent property)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.ModulePath.GLSL">GLSL (inviwopy.ModulePath attribute)</a>
@@ -13248,12 +13238,8 @@
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.VolumeSequence.push_back">push_back() (inviwopy.data.VolumeSequence method)</a>
 </li>
-      <li><a href="_generated/inviwopy.html#inviwopy.Tag.PY">PY (inviwopy.Tag attribute)</a>
-
-      <ul>
-        <li><a href="_generated/inviwopy.html#inviwopy.Tags.PY">(inviwopy.Tags attribute)</a>
+      <li><a href="_generated/inviwopy.html#inviwopy.Tags.PY">PY (inviwopy.Tags attribute)</a>
 </li>
-      </ul></li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySemantics.PythonEditor">PythonEditor (inviwopy.properties.PropertySemantics attribute)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.PythonInport">PythonInport (class in inviwopy)</a>
@@ -14261,8 +14247,6 @@
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySemantics.Text">Text (inviwopy.properties.PropertySemantics attribute)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySemantics.TextEditor">TextEditor (inviwopy.properties.PropertySemantics attribute)</a>
-</li>
-      <li><a href="_generated/inviwopy.data.html#inviwopy.data.TransferFunction.textureSize">textureSize (inviwopy.data.TransferFunction property)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.IsoTFProperty.tf">tf (inviwopy.properties.IsoTFProperty property)</a>
 </li>
