Update C++ API Docs

--- a/cpp-api/classinviwo_1_1BackgroundComponent.html
+++ b/cpp-api/classinviwo_1_1BackgroundComponent.html
@@ -139,7 +139,7 @@ Public Member Functions</h2></td></tr>
 <tr class="separator:a6f8bcb38ab9d323724626be3d2d21cc5 inherit pub_methods_classinviwo_1_1ShaderComponent"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
-<div class="textblock"><p>Adds an optional background inport, binds is and composites it into the result at when the ray passed the background depth. </p>
+<div class="textblock"><p>Adds an optional background inport, binds it and composites it into the result at when the ray passed the background depth. </p>
 </div><h2 class="groupheader">Member Function Documentation</h2>
 <a id="aabc3170af4b33b6138d109ade19de9b2" name="aabc3170af4b33b6138d109ade19de9b2"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#aabc3170af4b33b6138d109ade19de9b2">&#9670;&#160;</a></span>getInports()</h2>
