--- a/cpp-api/classinviwo_1_1ShaderComponentProcessorBase.html
+++ b/cpp-api/classinviwo_1_1ShaderComponentProcessorBase.html
@@ -126,11 +126,12 @@ $(function(){initNavTree('classinviwo_1_1ShaderComponentProcessorBase.html','');
 <area href="classinviwo_1_1ObservableInterface.html" alt="inviwo::ObservableInterface" shape="rect" coords="885,56,1170,80"/>
 <area href="classinviwo_1_1ObservableInterface.html" alt="inviwo::ObservableInterface" shape="rect" coords="0,0,285,24"/>
 <area href="classinviwo_1_1VolumeRaycasterBase.html" title="Base class for volume raycasters. Derived classes should register a set of ShaderComponents to custom..." alt="inviwo::VolumeRaycasterBase" shape="rect" coords="885,336,1170,360"/>
-<area href="classinviwo_1_1AtlasVolumeRaycaster.html" alt="inviwo::AtlasVolumeRaycaster" shape="rect" coords="295,392,580,416"/>
-<area href="classinviwo_1_1MultiChannelVolumeRaycaster.html" alt="inviwo::MultiChannelVolumeRaycaster" shape="rect" coords="590,392,875,416"/>
-<area href="classinviwo_1_1SphericalVolumeRaycaster.html" alt="inviwo::SphericalVolumeRaycaster" shape="rect" coords="885,392,1170,416"/>
-<area href="classinviwo_1_1StandardVolumeRaycaster.html" alt="inviwo::StandardVolumeRaycaster" shape="rect" coords="1180,392,1465,416"/>
-<area href="classinviwo_1_1TexturedIsosurfaceRenderer.html" alt="inviwo::TexturedIsosurfaceRenderer" shape="rect" coords="1475,392,1760,416"/>
+<area href="classinviwo_1_1AtlasVolumeRaycaster.html" alt="inviwo::AtlasVolumeRaycaster" shape="rect" coords="147,392,432,416"/>
+<area href="classinviwo_1_1LightVolumeRaycaster.html" alt="inviwo::LightVolumeRaycaster" shape="rect" coords="442,392,727,416"/>
+<area href="classinviwo_1_1MultiChannelVolumeRaycaster.html" alt="inviwo::MultiChannelVolumeRaycaster" shape="rect" coords="737,392,1022,416"/>
+<area href="classinviwo_1_1SphericalVolumeRaycaster.html" alt="inviwo::SphericalVolumeRaycaster" shape="rect" coords="1032,392,1317,416"/>
+<area href="classinviwo_1_1StandardVolumeRaycaster.html" alt="inviwo::StandardVolumeRaycaster" shape="rect" coords="1327,392,1612,416"/>
+<area href="classinviwo_1_1TexturedIsosurfaceRenderer.html" alt="inviwo::TexturedIsosurfaceRenderer" shape="rect" coords="1622,392,1907,416"/>
   </map>
 </div></div>
 <table class="memberdecls">
