--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -1121,10 +1121,14 @@
 <a href="classinviwo_1_1LightPropertyWidgetQt-members.html"/>
 <a href="classinviwo_1_1LightSource.html"/>
 <a href="classinviwo_1_1LightSource-members.html"/>
+<a href="classinviwo_1_1LightVolumeComponent.html"/>
+<a href="classinviwo_1_1LightVolumeComponent-members.html"/>
 <a href="classinviwo_1_1LightVolumeGL.html"/>
 <a href="classinviwo_1_1LightVolumeGL-members.html"/>
 <a href="structinviwo_1_1LightVolumeGL_1_1PropagationParameters.html"/>
 <a href="structinviwo_1_1LightVolumeGL_1_1PropagationParameters-members.html"/>
+<a href="classinviwo_1_1LightVolumeRaycaster.html"/>
+<a href="classinviwo_1_1LightVolumeRaycaster-members.html"/>
 <a href="classinviwo_1_1LineEditEventFilter.html"/>
 <a href="classinviwo_1_1LineEditEventFilter-members.html"/>
 <a href="classinviwo_1_1LineEditQt.html"/>
