Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -3810,6 +3810,8 @@
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListPropertyUIFlags.__ior__">(inviwopy.properties.ListPropertyUIFlags method)</a>
 </li>
+        <li><a href="_generated/inviwopy.html#inviwopy.Tags.__ior__">(inviwopy.Tags method)</a>
+</li>
         <li><a href="_generated/inviwopy.html#inviwopy.TouchStates.__ior__">(inviwopy.TouchStates method)</a>
 </li>
         <li><a href="_generated/ivwbnl.html#ivwbnl.BrushingModifications.__ior__">(ivwbnl.BrushingModifications method)</a>
@@ -5398,6 +5400,10 @@
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListPropertyUIFlags.__or__">(inviwopy.properties.ListPropertyUIFlags method)</a>
 </li>
+        <li><a href="_generated/inviwopy.html#inviwopy.Tag.__or__">(inviwopy.Tag method)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.Tags.__or__">(inviwopy.Tags method)</a>
+</li>
         <li><a href="_generated/inviwopy.html#inviwopy.TouchState.__or__">(inviwopy.TouchState method)</a>
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.TouchStates.__or__">(inviwopy.TouchStates method)</a>
@@ -6151,6 +6157,8 @@
         <li><a href="_generated/inviwopy.glm.html#inviwopy.glm.umat4x3.__rmul__">(inviwopy.glm.umat4x3 method)</a>
 </li>
       </ul></li>
+      <li><a href="_generated/inviwopy.html#inviwopy.Tags.__ror__">__ror__() (inviwopy.Tags method)</a>
+</li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyOwner.__setattr__">__setattr__() (inviwopy.properties.PropertyOwner method)</a>
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.MeshSequence.__setitem__">__setitem__() (inviwopy.data.MeshSequence method)</a>
