--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -33,6 +33,8 @@
 </style>
 </head>
 <body>
+<h2>2024-05-08 Order-independent rendering support for multiple volumes and meshes</h2>
+<p>The OIT module now contains functionality for volume rendering in combination with transparent meshes. Two processors, <code class="notranslate">Volume Rasterizer</code> and <code class="notranslate">Mesh Volume Renderer</code>, have been added. The former creating a rasterization object for a volume and transfer function and the latter being able to render multiple volumes and meshes at the same time.</p>
 <h2>2024-04-12 <code class="notranslate">Light Volume Raycaster</code></h2>
 <p>Based on the raycasting components and the <code class="notranslate">Standard Volume Raycaster</code>, the <code class="notranslate">Light Volume Raycaster</code> provides the same volume rendering capabilities while also considering a light volume for volumetric shading. The light volume can be generated with the processor of the same name (<code class="notranslate">Light Volume</code>).</p>
 <h2>2024-04-09 Updated <code class="notranslate">PositionProperty</code></h2>
