--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -33,6 +33,8 @@
 </style>
 </head>
 <body>
+<h2>2024-05-13 Two-sided lighting</h2>
+<p>The default lighting model was changed to support two-sided illumination. This should prevent issues with thin meshes like stream ribbons with no distinct front- and backsides. It is possible to select between two-sided and frontside/backside only illumination using the <code class="notranslate">Shading</code> property.</p>
 <h2>2024-05-08 Order-independent rendering support for multiple volumes and meshes</h2>
 <p>The OIT module now contains functionality for volume rendering in combination with transparent meshes. Two processors, <code class="notranslate">Volume Rasterizer</code> and <code class="notranslate">Mesh Volume Renderer</code>, have been added. The former creating a rasterization object for a volume and transfer function and the latter being able to render multiple volumes and meshes at the same time.</p>
 <h2>2024-04-12 <code class="notranslate">Light Volume Raycaster</code></h2>
