Update C++ API Docs

--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -1828,10 +1828,10 @@
 <a href="classinviwo_1_1PythonEditorDockWidget-members.html"/>
 <a href="classinviwo_1_1PythonEditorWidget.html"/>
 <a href="classinviwo_1_1PythonEditorWidget-members.html"/>
-<a href="classinviwo_1_1PythonExecutionOutputObeserver.html"/>
-<a href="classinviwo_1_1PythonExecutionOutputObeserver-members.html"/>
 <a href="classinviwo_1_1PythonExecutionOutputObservable.html"/>
 <a href="classinviwo_1_1PythonExecutionOutputObservable-members.html"/>
+<a href="classinviwo_1_1PythonExecutionOutputObserver.html"/>
+<a href="classinviwo_1_1PythonExecutionOutputObserver-members.html"/>
 <a href="classinviwo_1_1PythonFilePropertyWidgetQt.html"/>
 <a href="classinviwo_1_1PythonFilePropertyWidgetQt-members.html"/>
 <a href="classinviwo_1_1PythonInport.html"/>
@@ -1856,10 +1856,10 @@
 <a href="classinviwo_1_1PythonPropertyWidgetQt-members.html"/>
 <a href="classinviwo_1_1PythonScript.html"/>
 <a href="classinviwo_1_1PythonScript-members.html"/>
-<a href="classinviwo_1_1PythonScriptDisk.html"/>
-<a href="classinviwo_1_1PythonScriptDisk-members.html"/>
 <a href="classinviwo_1_1PythonSyntaxHighlight.html"/>
 <a href="classinviwo_1_1PythonSyntaxHighlight-members.html"/>
+<a href="classinviwo_1_1QPtr.html"/>
+<a href="classinviwo_1_1QPtr-members.html"/>
 <a href="classinviwo_1_1QStringHelper.html"/>
 <a href="classinviwo_1_1QStringHelper-members.html"/>
 <a href="classinviwo_1_1QStringHelper_3_01long_01int_01_4.html"/>
@@ -6260,8 +6260,8 @@
 <a href="classinviwo_1_1PythonEditorDockWidget.html#ac9888c022350ac016be2851af29ab645"/>
 <a href="classinviwo_1_1PythonEditorWidget.html"/>
 <a href="classinviwo_1_1PythonEditorWidget.html#a6ca6d0a82ea2315f49c34a8c4f26fbb3"/>
-<a href="classinviwo_1_1PythonExecutionOutputObeserver.html"/>
 <a href="classinviwo_1_1PythonExecutionOutputObservable.html"/>
+<a href="classinviwo_1_1PythonExecutionOutputObserver.html"/>
 <a href="classinviwo_1_1PythonFilePropertyWidgetQt.html"/>
 <a href="classinviwo_1_1PythonInport.html"/>
 <a href="classinviwo_1_1PythonInport.html#a3cb34a37b1c13b31bd649bbdab36ed35"/>
@@ -6281,13 +6281,11 @@
 <a href="classinviwo_1_1PythonPropertyWidgetQt.html"/>
 <a href="classinviwo_1_1PythonScript.html"/>
 <a href="classinviwo_1_1PythonScript.html#a21445a616ad64e5885921688fee72665"/>
-<a href="classinviwo_1_1PythonScript.html#a77778505292cfa4cdc9663b24dd8de0c"/>
-<a href="classinviwo_1_1PythonScript.html#ab935f541b435a393fe9772e107afc30b"/>
-<a href="classinviwo_1_1PythonScript.html#ad71ff1ffbabfd9c701e9240ab26f40c0"/>
-<a href="classinviwo_1_1PythonScriptDisk.html"/>
-<a href="classinviwo_1_1PythonScriptDisk.html#a2cb59ab63a82499357cbd81d7f66ebca"/>
-<a href="classinviwo_1_1PythonScriptDisk.html#a35d0df40985aba25326cfadfbe460d1f"/>
+<a href="classinviwo_1_1PythonScript.html#a418882ff29e21c87dc96546d9574d3a7"/>
+<a href="classinviwo_1_1PythonScript.html#a7f8c01b7f9019eba36aa8866693a98eb"/>
+<a href="classinviwo_1_1PythonScript.html#ad15e78b76dca29ab28aaabecba032aa0"/>
 <a href="classinviwo_1_1PythonSyntaxHighlight.html"/>
+<a href="classinviwo_1_1QPtr.html"/>
 <a href="classinviwo_1_1QStringHelper.html"/>
 <a href="classinviwo_1_1QStringHelper_3_01long_01int_01_4.html"/>
 <a href="classinviwo_1_1QStringHelper_3_01unsigned_01long_01int_01_4.html"/>
