Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -7221,8 +7221,12 @@
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.TouchEvent.averageDepth">averageDepth (inviwopy.TouchEvent property)</a>
 </li>
-      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Volume.axes">axes (inviwopy.data.Volume property)</a>
+      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Layer.axes">axes (inviwopy.data.Layer property)</a>
+
+      <ul>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.Volume.axes">(inviwopy.data.Volume property)</a>
 </li>
+      </ul></li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.Axis">Axis (class in inviwopy.data)</a>
 </li>
   </ul></td>
@@ -7273,9 +7277,11 @@
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BasicMesh">BasicMesh (class in inviwopy.data)</a>
 </li>
-      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Mesh.basis">basis (inviwopy.data.Mesh property)</a>
+      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Layer.basis">basis (inviwopy.data.Layer property)</a>
 
       <ul>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.Mesh.basis">(inviwopy.data.Mesh property)</a>
+</li>
         <li><a href="_generated/inviwopy.data.html#inviwopy.data.Volume.basis">(inviwopy.data.Volume property)</a>
 </li>
       </ul></li>
@@ -8467,8 +8473,12 @@
 </li>
       <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataFrameOutport">DataFrameOutport (class in ivwdataframe)</a>
 </li>
-      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Volume.dataMap">dataMap (inviwopy.data.Volume property)</a>
+      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Layer.dataMap">dataMap (inviwopy.data.Layer property)</a>
+
+      <ul>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.Volume.dataMap">(inviwopy.data.Volume property)</a>
 </li>
+      </ul></li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.DataMapper">DataMapper (class in inviwopy.data)</a>
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.DataMapper.dataRange">dataRange (inviwopy.data.DataMapper property)</a>
@@ -12321,12 +12331,16 @@
       </ul></li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.Wrapping.Mirror">Mirror (inviwopy.data.Wrapping attribute)</a>
 </li>
-      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Mesh.modelMatrix">modelMatrix (inviwopy.data.Mesh property)</a>
+      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Layer.modelMatrix">modelMatrix (inviwopy.data.Layer property)</a>
 
       <ul>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.Mesh.modelMatrix">(inviwopy.data.Mesh property)</a>
+</li>
         <li><a href="_generated/inviwopy.data.html#inviwopy.data.Volume.modelMatrix">(inviwopy.data.Volume property)</a>
 </li>
       </ul></li>
+      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Layer.modelMatrixFromDimensions">modelMatrixFromDimensions() (inviwopy.data.Layer static method)</a>
+</li>
       <li><a href="_generated/ivwbnl.html#ivwbnl.BrushingTargetsInvalidationLevel.modifications">modifications (ivwbnl.BrushingTargetsInvalidationLevel property)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.InteractionEvent.modifierNames">modifierNames() (inviwopy.InteractionEvent method)</a>
@@ -12618,9 +12632,11 @@
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.ProtectedModule.off">off (inviwopy.ProtectedModule attribute)</a>
 </li>
-      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Mesh.offset">offset (inviwopy.data.Mesh property)</a>
+      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Layer.offset">offset (inviwopy.data.Layer property)</a>
 
       <ul>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.Mesh.offset">(inviwopy.data.Mesh property)</a>
+</li>
         <li><a href="_generated/inviwopy.data.html#inviwopy.data.SkewedPerspectiveCamera.offset">(inviwopy.data.SkewedPerspectiveCamera property)</a>
 </li>
         <li><a href="_generated/inviwopy.data.html#inviwopy.data.Volume.offset">(inviwopy.data.Volume property)</a>
@@ -15110,9 +15126,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.html#inviwopy.IvwKey.World2">World2 (inviwopy.IvwKey attribute)</a>
 </li>
-      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Mesh.worldMatrix">worldMatrix (inviwopy.data.Mesh property)</a>
+      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Layer.worldMatrix">worldMatrix (inviwopy.data.Layer property)</a>
 
       <ul>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.Mesh.worldMatrix">(inviwopy.data.Mesh property)</a>
+</li>
         <li><a href="_generated/inviwopy.data.html#inviwopy.data.Volume.worldMatrix">(inviwopy.data.Volume property)</a>
 </li>
       </ul></li>
