Update C++ API Docs

--- a/cpp-api/classinviwo_1_1ProgressBarOwner.html
+++ b/cpp-api/classinviwo_1_1ProgressBarOwner.html
@@ -117,6 +117,7 @@ $(function(){initNavTree('classinviwo_1_1ProgressBarOwner.html',''); initResizab
   <map id="inviwo::ProgressBarOwner_map" name="inviwo::ProgressBarOwner_map">
 <area href="classinviwo_1_1CompositeProcessor.html" title="A processor containing a network of processors, i.e. it will act as a sub network within a processor ..." alt="inviwo::CompositeProcessor" shape="rect" coords="0,56,216,80"/>
 <area href="classinviwo_1_1PoolProcessor.html" alt="inviwo::PoolProcessor" shape="rect" coords="226,56,442,80"/>
+<area href="classinviwo_1_1WebBrowserProcessor.html" title="Render webpage into the color and picking layers (OpenGL)." alt="inviwo::WebBrowserProcessor" shape="rect" coords="452,56,668,80"/>
 <area href="classinviwo_1_1DistanceTransformRAM.html" alt="inviwo::DistanceTransformRAM" shape="rect" coords="452,112,668,136"/>
 <area href="classinviwo_1_1ImageDistanceTransform.html" alt="inviwo::ImageDistanceTransform" shape="rect" coords="452,168,668,192"/>
 <area href="classinviwo_1_1LayerDistanceTransform.html" alt="inviwo::LayerDistanceTransform" shape="rect" coords="452,224,668,248"/>
