--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -2627,6 +2627,8 @@
 <a href="classinviwo_1_1WaveFrontWriter-members.html"/>
 <a href="classinviwo_1_1WebBrowserApp.html"/>
 <a href="classinviwo_1_1WebBrowserApp-members.html"/>
+<a href="classinviwo_1_1WebBrowserBase.html"/>
+<a href="classinviwo_1_1WebBrowserBase-members.html"/>
 <a href="classinviwo_1_1WebBrowserClient.html"/>
 <a href="classinviwo_1_1WebBrowserClient-members.html"/>
 <a href="structinviwo_1_1WebBrowserClient_1_1BrowserData.html"/>
@@ -7302,6 +7304,10 @@
 <a href="classinviwo_1_1VolumeVoronoiSegmentation.html#abe0311962da76a897944686f377e3ce2"/>
 <a href="classinviwo_1_1WaveFrontWriter.html"/>
 <a href="classinviwo_1_1WebBrowserApp.html"/>
+<a href="classinviwo_1_1WebBrowserBase.html"/>
+<a href="classinviwo_1_1WebBrowserBase.html#a57bff7e3b9f3d8dba619c12cd7e33ab5"/>
+<a href="classinviwo_1_1WebBrowserBase.html#a726865c7c209993a0af60a7a91684617"/>
+<a href="classinviwo_1_1WebBrowserBase.html#aafaaab79286a9b4d0779f195bdb2cd7e"/>
 <a href="classinviwo_1_1WebBrowserClient.html"/>
 <a href="classinviwo_1_1WebBrowserClient.html#a1503fb8839abdf0e542e841837063981"/>
 <a href="classinviwo_1_1WebBrowserClient.html#a158f1dd14ef19d295370424f9b33867c"/>
@@ -7313,8 +7319,6 @@
 <a href="classinviwo_1_1WebBrowserModule.html"/>
 <a href="classinviwo_1_1WebBrowserProcessor.html"/>
 <a href="classinviwo_1_1WebBrowserProcessor.html#a5e35b2e6683ba0d959273b4c03d9738e"/>
-<a href="classinviwo_1_1WebBrowserProcessor.html#ad85667748eed3e826db2f2066d23f938"/>
-<a href="classinviwo_1_1WebBrowserProcessor.html#aff6dada17dee97f347d750c2ac9c2605"/>
 <a href="classinviwo_1_1WebBrowserSettings.html"/>
 <a href="classinviwo_1_1WelcomeWidget.html"/>
 <a href="classinviwo_1_1WheelEvent.html"/>
