--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -14,6 +14,7 @@
 <a href="group__processors.html"/>
 <a href="group__properties.html"/>
 <a href="group__typedmesh.html"/>
+<a href="structfmt_1_1is__range_3_01inviwo_1_1flags_1_1flags_3_01T_01_4_00_01Char_01_4.html"/>
 <a href="namespaceinviwo.html"/>
 <a href="classinviwo_1_1AbortException.html"/>
 <a href="classinviwo_1_1AbortException-members.html"/>
@@ -4322,10 +4323,10 @@
 <a href="classinviwo_1_1CameraProperty.html#a57c9e847d1c5b80fc5dfe48d041b8e22"/>
 <a href="classinviwo_1_1CameraProperty.html#a6c53f7a1e7ec11eff5b65bf951b1213c"/>
 <a href="classinviwo_1_1CameraProperty.html#a76a92bb1d000dca0d7cd413864f1f81d"/>
-<a href="classinviwo_1_1CameraProperty.html#a896c4b56fe6b5d72a5447cb53d14b6b2"/>
 <a href="classinviwo_1_1CameraProperty.html#a9809d3da72f008bac786199166d21db2"/>
 <a href="classinviwo_1_1CameraProperty.html#a987b553f2b0deb651b21ec9fe8f80e46"/>
 <a href="classinviwo_1_1CameraProperty.html#aa17e6e395dc830d93b745458225b8318"/>
+<a href="classinviwo_1_1CameraProperty.html#aac9f6f6c37394aa42f860edbf2ff8527"/>
 <a href="classinviwo_1_1CameraProperty.html#ac17349631c9045756d2a7224f65df963"/>
 <a href="classinviwo_1_1CameraProperty.html#acc4c1f079851a2288a370d31afc4376d"/>
 <a href="classinviwo_1_1CameraProperty.html#addc4f47d2d947e2d04063197fc5592c1"/>
@@ -4767,7 +4768,7 @@
 <a href="classinviwo_1_1EventProperty.html#a66d4edee854917f94c5afa15e433f687"/>
 <a href="classinviwo_1_1EventProperty.html#ac5e344a9c88f1a1a65178d3d396028d8"/>
 <a href="classinviwo_1_1EventPropertyWidgetQt.html"/>
-<a href="classinviwo_1_1EventPropertyWidgetQt.html#a344c2d307dba37e1226f5ea5af608ffc"/>
+<a href="classinviwo_1_1EventPropertyWidgetQt.html#ac6ef93b66e251b1c6c6cf31e447cdf7a"/>
 <a href="classinviwo_1_1Exception.html"/>
 <a href="classinviwo_1_1Exporter.html"/>
 <a href="classinviwo_1_1Exporter.html#a9ec52a70bed8b76ace3a5b9fe8f7b376"/>
@@ -8399,6 +8400,7 @@
 <a href="namespacemembers_z.html"/>
 <a href="namespaces.html"/>
 <a href="namespacestd.html"/>
+<a href="structfmt_1_1is__range_3_01inviwo_1_1flags_1_1flags_3_01T_01_4_00_01Char_01_4.html"/>
 <a href="structinviwo_1_1Axis.html"/>
 <a href="structinviwo_1_1BrushingTarget.html"/>
 <a href="structinviwo_1_1BrushingTargetsInvalidationLevel.html"/>
