Meta: Changelog update

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -33,6 +33,8 @@
 </style>
 </head>
 <body>
+<h2>2024-09-10 LineRenderer brushing &amp; linking</h2>
+<p>The 2D <code class="notranslate">LineRenderer</code> processor now supports brushing and linking similar to the <code class="notranslate">SphereRenderer</code> including selection, highlighting, and filtering.</p>
 <h2>2024-05-13 Two-sided lighting</h2>
 <p>The default lighting model was changed to support two-sided illumination. This should prevent issues with thin meshes like stream ribbons with no distinct front- and backsides. It is possible to select between two-sided and frontside/backside only illumination using the <code class="notranslate">Shading</code> property.</p>
 <h2>2024-05-08 Order-independent rendering support for multiple volumes and meshes</h2>
