WebBrowser/WebQt/JSON/Various: Major refactoring and enhancements
- Added `WebQt` module with HTML/JS syntax highlighting.
- Introduced `NetWorkCefSynchronizer` for CEF synchronization.
- Refactored `WebBrowserClient` and `WebBrowserModule`.
- Added `BasicWebBrowser` processor as a generic webbrowser proessor
- Improved error handling and logging.
- CEF uses opengl textures to pass frames instead of CPU on windows
- Major refactoring of the JSON converter "factories"
- Removed the HTMLWidget factory.
- Added a new inviwoapiv2.js API

--- a/modules/webbrowser/data/html/web_property_sync.html
+++ b/modules/webbrowser/data/html/web_property_sync.html
@@ -3,9 +3,9 @@
   <meta charset="utf-8">
   <title>Inviwo property syncing example</title>
   
-  <!-- inviwo://yourmodulename will be rediredcted to the module directory on the harddrive -->
-  <!-- inviwo://app will be rediredcted to the application (InviwoApplication::getBasePath()) directory on the harddrive -->
-  <script src="inviwo://webbrowser/data/js/inviwoapi.js"></script>
+  <!-- https://inviwo/yourmodulename will be rediredcted to the module directory on the harddrive -->
+  <!-- https://inviwo/app will be rediredcted to the application (InviwoApplication::getBasePath()) directory on the harddrive -->
+  <script src="https://inviwo/webbrowser/data/js/inviwoapi.js"></script>
 
   <script language="JavaScript">
     // Initialize Inviwo API so that we can use it to synchronize properties
@@ -76,10 +76,6 @@
     <form>
       <ul class="flex-outer">
         <li>
-          <label for="processorID">Processor Identifier</label>
-          <input type="text" readonly id="processorID">
-        </li>
-        <li>
           <label for="ordinalProperty">OrdinalProperty (line width)</label>
           <input type="range" id="ordinalProperty" min="1" max="100" value="50" class="slider">
         </li>
@@ -112,13 +108,7 @@
   </div>
 </body>
 
-
 <script>
-
-// Get the processor identifier of the parent web processor and show it
-inviwo.getParentWebBrowserProcessor(function(processor) {
-  document.getElementById("processorID").value = processor.path;
-});
 
 
 
