Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html class="writer-html5" lang="en" data-content_root="./">
 <head>
@@ -5,18 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Index &mdash; Inviwo Python API 0.9.12-pre documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=80d5e7a1" />
-      <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
+      <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=7ab3649f" />
 
   
-  <!--[if lt IE 9]>
-    <script src="_static/js/html5shiv.min.js"></script>
-  <![endif]-->
-  
-        <script src="_static/jquery.js?v=5d32c60e"></script>
-        <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="_static/documentation_options.js?v=28b1853b"></script>
-        <script src="_static/doctools.js?v=9a2dae69"></script>
-        <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
+      <script src="_static/jquery.js?v=5d32c60e"></script>
+      <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
+      <script src="_static/documentation_options.js?v=28b1853b"></script>
+      <script src="_static/doctools.js?v=9a2dae69"></script>
+      <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" /> 
@@ -2865,6 +2863,10 @@
         <li><a href="_generated/inviwopy.html#inviwopy.ImageDataWriter.__init__">(inviwopy.ImageDataWriter method)</a>
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.Inport.__init__">(inviwopy.Inport method)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.InportCallbackHolderOutport.__init__">(inviwopy.InportCallbackHolderOutport method)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.InportCallbackHolderVoid.__init__">(inviwopy.InportCallbackHolderVoid method)</a>
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.InportVectorWrapper.__init__">(inviwopy.InportVectorWrapper method)</a>
 </li>
@@ -11009,6 +11011,10 @@
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.PortConnection.inport">inport (inviwopy.PortConnection property)</a>
 </li>
+      <li><a href="_generated/inviwopy.html#inviwopy.InportCallbackHolderOutport">InportCallbackHolderOutport (class in inviwopy)</a>
+</li>
+      <li><a href="_generated/inviwopy.html#inviwopy.InportCallbackHolderVoid">InportCallbackHolderVoid (class in inviwopy)</a>
+</li>
       <li><a href="_generated/inviwopy.html#inviwopy.Processor.inports">inports (inviwopy.Processor property)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.InportVectorWrapper">InportVectorWrapper (class in inviwopy)</a>
@@ -13626,6 +13632,12 @@
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.Mesh.reserveSizeInVertexBuffer">reserveSizeInVertexBuffer() (inviwopy.data.Mesh method)</a>
 </li>
+      <li><a href="_generated/inviwopy.html#inviwopy.InportCallbackHolderOutport.reset">reset() (inviwopy.InportCallbackHolderOutport method)</a>
+
+      <ul>
+        <li><a href="_generated/inviwopy.html#inviwopy.InportCallbackHolderVoid.reset">(inviwopy.InportCallbackHolderVoid method)</a>
+</li>
+      </ul></li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyOwner.resetAllPoperties">resetAllPoperties() (inviwopy.properties.PropertyOwner method)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Property.resetToDefaultState">resetToDefaultState() (inviwopy.properties.Property method)</a>
