Update C++ API Docs

--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -723,6 +723,8 @@
 <a href="classinviwo_1_1HistogramCache-members.html"/>
 <a href="structinviwo_1_1HistogramCache_1_1Result.html"/>
 <a href="structinviwo_1_1HistogramCache_1_1Result-members.html"/>
+<a href="classinviwo_1_1HistogramToDataFrame.html"/>
+<a href="classinviwo_1_1HistogramToDataFrame-members.html"/>
 <a href="classinviwo_1_1IgnoreException.html"/>
 <a href="classinviwo_1_1IgnoreException-members.html"/>
 <a href="classinviwo_1_1Image.html"/>
@@ -1663,6 +1665,10 @@
 <a href="structinviwo_1_1ProcessorTraits_3_01CompositeSink_3_01InportType_00_01OutportType_01_4_01_4-members.html"/>
 <a href="structinviwo_1_1ProcessorTraits_3_01CompositeSource_3_01InportType_00_01OutportType_01_4_01_4.html"/>
 <a href="structinviwo_1_1ProcessorTraits_3_01CompositeSource_3_01InportType_00_01OutportType_01_4_01_4-members.html"/>
+<a href="structinviwo_1_1ProcessorTraits_3_01HistogramToDataFrame_3_01Layer_01_4_01_4.html"/>
+<a href="structinviwo_1_1ProcessorTraits_3_01HistogramToDataFrame_3_01Layer_01_4_01_4-members.html"/>
+<a href="structinviwo_1_1ProcessorTraits_3_01HistogramToDataFrame_3_01Volume_01_4_01_4.html"/>
+<a href="structinviwo_1_1ProcessorTraits_3_01HistogramToDataFrame_3_01Volume_01_4_01_4-members.html"/>
 <a href="structinviwo_1_1ProcessorTraits_3_01InputSelector_3_01Inport_00_01Outport_01_4_01_4.html"/>
 <a href="structinviwo_1_1ProcessorTraits_3_01InputSelector_3_01Inport_00_01Outport_01_4_01_4-members.html"/>
 <a href="structinviwo_1_1ProcessorTraits_3_01PathLines3D_01_4.html"/>
@@ -4994,6 +5000,8 @@
 <a href="classinviwo_1_1HelpWidget.html"/>
 <a href="classinviwo_1_1HiddenCanvasQt.html"/>
 <a href="classinviwo_1_1HistogramCache.html"/>
+<a href="classinviwo_1_1HistogramToDataFrame.html"/>
+<a href="classinviwo_1_1HistogramToDataFrame.html#a073bbccbf1782e2269ec2bb30b9dca1d"/>
 <a href="classinviwo_1_1ISORaycaster.html"/>
 <a href="classinviwo_1_1ISORaycaster.html#a44ac61507377570a4eebe3ab88e5c0cf"/>
 <a href="classinviwo_1_1ISORaycaster.html#a72ee4d34087df1ebb9b688b3c9bbb0cd"/>
@@ -8613,6 +8621,8 @@
 <a href="structinviwo_1_1ProcessorTraits_3_01BasisTransform_3_01Volume_01_4_01_4.html"/>
 <a href="structinviwo_1_1ProcessorTraits_3_01CompositeSink_3_01InportType_00_01OutportType_01_4_01_4.html"/>
 <a href="structinviwo_1_1ProcessorTraits_3_01CompositeSource_3_01InportType_00_01OutportType_01_4_01_4.html"/>
+<a href="structinviwo_1_1ProcessorTraits_3_01HistogramToDataFrame_3_01Layer_01_4_01_4.html"/>
+<a href="structinviwo_1_1ProcessorTraits_3_01HistogramToDataFrame_3_01Volume_01_4_01_4.html"/>
 <a href="structinviwo_1_1ProcessorTraits_3_01InputSelector_3_01Inport_00_01Outport_01_4_01_4.html"/>
 <a href="structinviwo_1_1ProcessorTraits_3_01PathLines3D_01_4.html"/>
 <a href="structinviwo_1_1ProcessorTraits_3_01StreamLines2D_01_4.html"/>
