--- a/cpp-api/classinviwo_1_1ProgressBarOwner.html
+++ b/cpp-api/classinviwo_1_1ProgressBarOwner.html
@@ -115,18 +115,19 @@ $(function(){initNavTree('classinviwo_1_1ProgressBarOwner.html',''); initResizab
  <div class="center">
   <img src="classinviwo_1_1ProgressBarOwner.png" usemap="#inviwo::ProgressBarOwner_map" alt=""/>
   <map id="inviwo::ProgressBarOwner_map" name="inviwo::ProgressBarOwner_map">
-<area href="classinviwo_1_1CompositeProcessor.html" title="A processor containing a network of processors, i.e. it will act as a sub network within a processor ..." alt="inviwo::CompositeProcessor" shape="rect" coords="0,56,216,80"/>
-<area href="classinviwo_1_1PoolProcessor.html" alt="inviwo::PoolProcessor" shape="rect" coords="226,56,442,80"/>
-<area href="classinviwo_1_1WebBrowserProcessor.html" title="Render webpage into the color and picking layers (OpenGL)." alt="inviwo::WebBrowserProcessor" shape="rect" coords="452,56,668,80"/>
-<area href="classinviwo_1_1DistanceTransformRAM.html" alt="inviwo::DistanceTransformRAM" shape="rect" coords="452,112,668,136"/>
-<area href="classinviwo_1_1ImageDistanceTransform.html" alt="inviwo::ImageDistanceTransform" shape="rect" coords="452,168,668,192"/>
-<area href="classinviwo_1_1LayerDistanceTransform.html" alt="inviwo::LayerDistanceTransform" shape="rect" coords="452,224,668,248"/>
-<area href="classinviwo_1_1SurfaceExtraction.html" alt="inviwo::SurfaceExtraction" shape="rect" coords="452,280,668,304"/>
-<area href="classinviwo_1_1VolumeLaplacianProcessor.html" alt="inviwo::VolumeLaplacianProcessor" shape="rect" coords="452,336,668,360"/>
-<area href="classinviwo_1_1VolumeRaycaster.html" alt="inviwo::VolumeRaycaster" shape="rect" coords="452,392,668,416"/>
-<area href="classinviwo_1_1VolumeRegionStatistics.html" alt="inviwo::VolumeRegionStatistics" shape="rect" coords="452,448,668,472"/>
-<area href="classinviwo_1_1VolumeSubsample.html" alt="inviwo::VolumeSubsample" shape="rect" coords="452,504,668,528"/>
-<area href="classinviwo_1_1VolumeVoronoiSegmentation.html" alt="inviwo::VolumeVoronoiSegmentation" shape="rect" coords="452,560,668,584"/>
+<area href="classinviwo_1_1CompositeProcessor.html" title="A processor containing a network of processors, i.e. it will act as a sub network within a processor ..." alt="inviwo::CompositeProcessor" shape="rect" coords="0,56,217,80"/>
+<area href="classinviwo_1_1HistogramToDataFrame.html" alt="inviwo::HistogramToDataFrame&lt; T &gt;" shape="rect" coords="227,56,444,80"/>
+<area href="classinviwo_1_1PoolProcessor.html" alt="inviwo::PoolProcessor" shape="rect" coords="454,56,671,80"/>
+<area href="classinviwo_1_1WebBrowserProcessor.html" title="Render webpage into the color and picking layers (OpenGL)." alt="inviwo::WebBrowserProcessor" shape="rect" coords="681,56,898,80"/>
+<area href="classinviwo_1_1DistanceTransformRAM.html" alt="inviwo::DistanceTransformRAM" shape="rect" coords="681,112,898,136"/>
+<area href="classinviwo_1_1ImageDistanceTransform.html" alt="inviwo::ImageDistanceTransform" shape="rect" coords="681,168,898,192"/>
+<area href="classinviwo_1_1LayerDistanceTransform.html" alt="inviwo::LayerDistanceTransform" shape="rect" coords="681,224,898,248"/>
+<area href="classinviwo_1_1SurfaceExtraction.html" alt="inviwo::SurfaceExtraction" shape="rect" coords="681,280,898,304"/>
+<area href="classinviwo_1_1VolumeLaplacianProcessor.html" alt="inviwo::VolumeLaplacianProcessor" shape="rect" coords="681,336,898,360"/>
+<area href="classinviwo_1_1VolumeRaycaster.html" alt="inviwo::VolumeRaycaster" shape="rect" coords="681,392,898,416"/>
+<area href="classinviwo_1_1VolumeRegionStatistics.html" alt="inviwo::VolumeRegionStatistics" shape="rect" coords="681,448,898,472"/>
+<area href="classinviwo_1_1VolumeSubsample.html" alt="inviwo::VolumeSubsample" shape="rect" coords="681,504,898,528"/>
+<area href="classinviwo_1_1VolumeVoronoiSegmentation.html" alt="inviwo::VolumeVoronoiSegmentation" shape="rect" coords="681,560,898,584"/>
   </map>
 </div></div>
 <table class="memberdecls">
