Update C++ API Docs

--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -8348,6 +8348,7 @@
 <a href="namespaceinviwo_1_1util.html#ae49e61ebf3b11c94b3497f88bb454634"/>
 <a href="namespaceinviwo_1_1util.html#ae4a4886800ee3ba916742c7158b183d4"/>
 <a href="namespaceinviwo_1_1util.html#ae521c3dff86b5ef56d2797786d2b95bf"/>
+<a href="namespaceinviwo_1_1util.html#ae56ff35451c5eafad52c74568b0ae4f2"/>
 <a href="namespaceinviwo_1_1util.html#ae69ba056958e896c36c307cef6c8be5d"/>
 <a href="namespaceinviwo_1_1util.html#ae6c3c7230deaaaa556873e2684e4303f"/>
 <a href="namespaceinviwo_1_1util.html#ae84a9ec3e9841aca2ea06fa34aaaed50"/>
